# yahtsee

./: .gitignore  .gitmodules  CMakeLists.txt  Gopkg.toml  Makefile.am  Makefile.in  README.md  build_darwin.sh  chess.cpp  conanfile.txt  config.h.in  configure  configure.ac  imgui.ini  lower.txt  main.cpp  menu.txt  package.json  premake4.lua  tags  template.txt  template2.txt  upper.txt  yaht_game.h  yahtsee.darwin.tar.bz2  yahtsee.rb
cmake/: FindUUID.cmake  config.h.in
cmd/: main.go
configs/: yahtsee.json
internal/: config.go  game.go  graphics.go  ui.go  view.go
internal/events/: bus.go  channel.go  event.go  score.go
internal/graphics/: fonts.go  gl.go  glfw.go  graphics.go  sdl.go  textures.go  type.go
internal/states/: state.go
internal/views/: board.go  chat.go  demo.go  dice.go  menu.go  new_game.go  players.go  sheet.go  side.go  type.go
internal/yahtsee/: score.go  shaker.go
resources/: CMakeLists.txt  continue_menu.txt  header.txt  lower.txt  lower_header.txt  lower_header_minimal.txt  menu.txt  upper.txt  yahtsee.assets  yahtsee.json  yahtsee.man
src/: CMakeLists.txt  Makefile.am  Makefile.in  alert_box.cpp  alert_box.h  caca_game.cpp  caca_game.h  client.cpp  client.h  connection.cpp  connection.h  connection_factory.cpp  connection_factory.h  connection_state.cpp  connection_state.h  curses_ui.cpp  event_manager.cpp  event_manager.h  game.cpp  game.h  game_action.cpp  game_action.h  game_actions.cpp  game_display.cpp  game_input.cpp  game_input.h  game_logic.cpp  game_logic.h  game_manager.h  game_state.cpp  game_state.h  game_ui.cpp  game_ui.h  input_manager.cpp  input_manager.h  log.cpp  log.h  main.cpp  matchmaker.cpp  matchmaker.h  (+19 more)
src/orig/: CMakeLists.txt  caca_game.cpp  game.h  game_actions.cpp  log.h
tests/: CMakeLists.txt  Makefile.am  Makefile.in
