bin_PROGRAMS = yahtsee rest

yahtsee_SOURCES = main.cpp yaht_game.cpp game_state.cpp caca_game.cpp alert_box.cpp matchmaker.cpp yaht_client.cpp

yahtsee_LDFLAGS = -lcaca -larg3dice -larg3net -larg3str -lpthread -larg3json -ljson

rest_SOURCES = rest_client.cpp

rest_LDFLAGS = -luriparser -larg3net -larg3json -ljson

